--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -1,6 +1,11 @@
 ﻿@page
 @model LabMaterials.Pages.ManageItemsModel
+@{
+    Layout = "_Layout";
+}
 @section Scripts
+
+
 {
     <script type="text/javascript" language="javascript">
         const notyf = new Notyf({
