--- a/Pages/Supplies.cshtml
+++ b/Pages/Supplies.cshtml
@@ -1,5 +1,9 @@
 ﻿@page
 @model LabMaterials.Pages.SuppliesModel
+@{
+    Layout = "Shared/_Layout";
+}
+
 @section Scripts
 {
     <script type="text/javascript" language="javascript">
@@ -189,7 +193,7 @@
                 </ol>
             </nav>
             <h2 class="h4">@Model.lblSupplies</h2>
-            <!-- <p class="mb-0">Your web analytics dashboard template.</p>-->
+            @*<p class="mb-0">Your web analytics dashboard template.</p>*@
         </div>
         <div class="btn-toolbar mb-2 mb-md-0">
                     <div class="btn-group mx-3 ms-lg-3">
