--- a/Pages/AddDisbursement.cshtml
+++ b/Pages/AddDisbursement.cshtml
@@ -344,7 +344,7 @@
                                             {
                                                 if (item.IsActive == 1 && item.Ended == null)
                                                 {
-                                                    <option value="@item.StoreId" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>
+                                                    <option value="@item.StoreName" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>
                                                 }
                                             }
                                         }
