--- a/Pages/ViewDispensedReport.cshtml
+++ b/Pages/ViewDispensedReport.cshtml
@@ -1,4 +1,258 @@
 ﻿@page
-@model LabMaterials.Pages.ViewItemCardsModel
+@model LabMaterials.Pages.ViewDispensedReportModel
 @{
+    ViewData["Title"] = "View Material Dispensing";
 }
+
+<style>
+    .nested-table td th {
+        border: none;
+    }
+</style>
+
+
+<div class="d-block mb-4 mb-md-0">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb bg-transparent p-2 mb-0">
+            <li class="breadcrumb-item d-flex align-items-center">
+                <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+            </li>
+            <li class="breadcrumb-item d-flex align-items-center">
+                <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
+
+                <a href="/Requests" class="text-decoration-none">@Model.lblRequests</a>
+            </li>
+            <li class="breadcrumb-item d-flex align-items-center">
+                <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
+                @ViewData["Title"]
+            </li>
+
+        </ol>
+    </nav>
+
+    <h1 class="h4">@ViewData["Title"]</h1>
+</div>
+
+
+<div>
+    @if (Model.MaterialRequest != null)
+    {
+        var MaterialRequest = Model.MaterialRequest;
+        <div class="card mb-4 border shadow-sm">
+            <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+                <strong>Receiving Report - Serial No: @MaterialRequest.SerialNumber</strong>
+                <div>
+                    @* <a asp-page="/EditReceivingReport" asp-route-id="@report.Id" class="btn btn-sm btn-success me-2 text-white">Edit</a> *@
+                    @* <a asp-page="/PrintReceivingReport" asp-route-id="@report.Id" class="btn btn-sm btn-secondary">Print</a> *@
+                    
+                    
+                    <form method="post">
+                        <input type="hidden" value="@MaterialRequest.SerialNumber" name="serialNumber" />
+                        <input type="hidden" value="@MaterialRequest.RequestId" name="ReceivingReportId" />
+                        @* <input type="submit" value="Edit" class="btn btn-secondary" asp-page-handler="Edit" /> *@
+                        <button id="PrintReport" class="btn btn-primary">Print</button>
+                    </form>
+
+                </div>
+            </div>
+            <div class="card-body">
+                @* <div>
+                    <p>Approval Status</p>
+                    <p>Technical Member: @report.TechnicalMemberApproval</p>
+                    @if(Model.GeneralSupervisor != null){
+                        <p>General Supervisor: @report.TechnicalMemberApproval</p>
+
+                    }
+                    
+                </div> *@
+
+                <dl class="row">
+                    <dt class="col-sm-3">Fiscal Year</dt>
+                    <dd class="col-sm-3">@MaterialRequest.FiscalYear</dd>
+
+                    <dt class="col-sm-3">Request Date</dt>
+                    <dd class="col-sm-3">@MaterialRequest.CreatedAt?.ToString("yyyy-MM-dd")</dd>
+
+                    <dt class="col-sm-3">Requesting Sector</dt>
+                    <dd class="col-sm-3">@Model.RequestingSector</dd>
+
+                    <dt class="col-sm-3">Sector</dt>
+                    <dd class="col-sm-3">@MaterialRequest.Sector</dd>
+                    
+                    
+                    <dt class="col-sm-3">Receiving Warehouse</dt>
+                    <dd class="col-sm-3">@MaterialRequest.WarehouseName</dd>
+
+                    <dt class="col-sm-3">Document Type</dt>
+                    <dd class="col-sm-3">@MaterialRequest.RequestDocumentType</dd>
+
+                    <dt class="col-sm-3">Document No.</dt>
+                    <dd class="col-sm-3">@MaterialRequest.DocumentNumber</dd>
+
+                    <dt class="col-sm-3">Order Date</dt>
+                    <dd class="col-sm-3">@MaterialRequest.OrderDate.ToString("yyyy-MM-dd")</dd>
+
+                    <dt class="col-sm-3">Dept. Manager</dt>
+                    <dd class="col-sm-3">@Model.DeptManager</dd>
+
+                    <dt class="col-sm-3">Keeper</dt>
+                    <dd class="col-sm-3">@Model.Keeper</dd>
+
+                    <dt class="col-sm-3">Technical Member</dt>
+                    <dd class="col-sm-3">TechnicalMember</dd>
+
+                    <dt class="col-sm-3">General Supervisor</dt>
+                        @if(Model.GeneralSupervisor != null){
+                            <dd class="col-sm-3">@Model.GeneralSupervisor</dd>
+                        }
+                        else
+                        { <dd class="col-sm-3">  none</dd>
+                        }
+
+                </dl>
+
+
+                <table class="table table-bordered table-striped" >
+                    <thead>
+                        <tr>
+                            <th>Comments</th>
+                            <th>Item Name</th>
+                            <th>Item Quantity</th>
+                            <th>Unit Price</th>
+                            <th>Total Price</th>
+                        </tr>
+                    </thead>
+                    <tbody id="itemsTableBody">
+                        @foreach (var item in Model.DispensedItems)
+                        {
+                            var ItemName = Model.ItemCards.FirstOrDefault(i => i.Id == item.ItemCardId)?.ItemName ?? "";
+
+                            <tr>
+                                <td>@item.Comments</td>
+                                <td>@ItemName</td>
+                                <td>@item.Quantity</td>
+                                <td>@item.UnitPrice</td>
+                                <td>@(item.Quantity * item.UnitPrice)</td>
+                            </tr>
+                        }
+                   
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+    }
+    else
+    {
+        <div class="alert alert-info text-center">No Material Dispensing report available.</div>
+    }
+</div>
+
+<div id="printArea" style="display: none;">
+    <table class="table-format border"" align="center"  id="printArea" style="width: 826px;"  dir="@Model.dir">
+        <tr>
+            <td colspan="10">
+                <div align="center" style=" margin-top: 20px; margin-bottom: 40px; font-weight: bold;">
+                  ReceivingItems
+                </div>
+                @* @{
+                    var rep = Model.MaterialRequest;
+                } *@
+                <table class="nested-table" border="0" width="100%">
+                    <tr >
+                       <td style="width: 15%;border: none; font-size: 14px;white-space: nowrap;" >lblRecipientSector</td>
+                        <td style="width: 15%;border: none; font-size: 14px;">RecipientSector</td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;" align="center">SupplierName</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;">SupplierName</td>
+                        <td style="width: 15%;border: none;font-size: 14px;" align="right">lblSerialNo</td>
+                        <td style="width: 15%;border: none;font-size: 14px;">SerialNumber</td>
+                        
+                    </tr>
+                    <tr>
+                       <td style="width: 15%;border: none;font-size: 14px;">lblSectorNo</td>
+                        <td style="width: 15%;border: none;font-size: 14px;">Sector</td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;"  align="right">PageCount</td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        
+                    </tr>
+                    <tr>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;" >RecipientWarehouse</td>
+                        <td style="width: 15%;border: none;font-size: 14px;">ReceivingWarehouse</td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;" align="right">lblDateOfReceipt</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;">OrderDate</td>
+                        
+                    </tr>
+                    <tr>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;">BasedOnDocument</td>
+                        <td style="width: 15%;border: none;font-size: 14px;">DocumentNumber</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap" align="center">DocumentNo</td>
+                        <td style="width: 15%;border: none;font-size: 14px;;">DocumentNumber</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;" align="center">DocumentDate</td>
+                        <td style="width: 15%;border: none;font-size: 14px;">OrderDate</td>
+                        <td style="width: 15%;border: none;font-size: 14px;"  align="right">FiscalYear</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;">FiscalYear</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <th style="width: 5%;font-size: 14px;" rowspan="2">Count</th>
+            <th style="width: 5%;font-size: 14px;" rowspan="2">ItemNo</th>
+            <th style="width: 20%;font-size: 14px;" rowspan="2">ItemNameDescription</th>
+            <th style="width: 3%;font-size: 14px;" rowspan="2">UnitOfMeasure</th>
+            <th style="width: 3%;font-size: 14px;" rowspan="2">Quantity</th>
+            <th style="width: 7%;font-size: 14px;" colspan="2">UnitPrice</th>
+            <th style="width: 7%;font-size: 14px;" colspan="2">TotalPrice</th>
+            <th style="width: 25%;font-size: 14px;" rowspan="2">Comments</th>
+        </tr>
+        <tr>
+            <td style="width: 3.5%;font-size: 14px; text-align: center;"></td>
+            <td style="width: 3.5%;font-size: 14px; text-align: center;">SAR</td>
+            <td style="width: 3.5%;font-size: 14px; text-align: center;"></td>
+            <td style="width: 3.5%;font-size: 14px; text-align: center;">SAR</td>
+        </tr>
+        @* @foreach (var item in Model.DispensedItems)
+            var Item = Model.Items.FirstOrDefault(i => i.ItemId == item.MaterialRequestId);      
+            var UnitMeasure = Model.Units.FirstOrDefault(u => u.Id == Item.UnitId).UnitCode ?? ""; *@
+            <tr>
+                <td style="font-size: 14px;">&nbsp;</td>
+                <td style="font-size: 14px;">Quantity</td>
+                <td style="font-size: 14px;">ItemDescription</td>
+                <td style="font-size: 14px;">UnitMeasure</td>
+                <td style="font-size: 14px;">Quantity</td>
+                <td style="font-size: 14px;"></td>
+                <td style="font-size: 14px;">UnitPrice</td>
+                <td style="font-size: 14px;">&nbsp;</td>
+                <td style="font-size: 14px;">UnitPrice)</td>
+                <td style="font-size: 14px;">Comments</td>
+
+            </tr>
+        @* } *@
+        <tr>
+            <td style="font-size: 14px;">&nbsp;</td>
+            <td style="font-size: 14px;">&nbsp;</td>
+            <td style="font-size: 14px;">&nbsp;</td>
+            <td colspan="7" >TotalPrice</td>
+        </tr>
+        <tr>
+            <td colspan="2" style="text-align: center;font-size: 14px;"><b>Recipient</b></td>
+            <td colspan="2.5" style="text-align: center;font-size: 14px;"><b>TechnicalMember</b></td>
+            <td colspan="5" style="text-align: center;font-size: 14px;"><b>ChiefResponsible</b></td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td rowspan="2" colspan="2" style="text-align: center;font-size: 14px;"></td>
+            <td colspan="2.5"></td>
+            <td colspan="5"></td>
+            <td style=" text-align: center;font-size: 14px;">Name<br>Signature<br>Date</td>
+        </tr>
+    </table>
+</div>
