--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -171,6 +171,141 @@
         }
     </script>
 
+    <script>
+        document.addEventListener("DOMContentLoaded", function (event) {
+            var optionsTrafficVolumesChart = {
+                series: [
+                    {
+                        name: "Supplies",
+                        data: [7100, 9600, 10000, 8700, 12000, 15400, 19000],
+                    },
+                    {
+                        name: "Disbursement",
+                        data: [4100, 6800, 7000, 6700, 7200, 14000, 12000],
+                    },
+                ],
+                colors: ["#4D4AE8", "#FD8E7A", "#06A77D", "#51449E"],
+                chart: {
+                    height: 420,
+                    type: "line",
+                    fontFamily: "Inter",
+                    foreColor: "#4B5563",
+                    toolbar: {
+                        show: true,
+                        offsetX: 0,
+                        offsetY: 0,
+                        tools: {
+                            download: false,
+                            selection: false,
+                            zoom: false,
+                            zoomin: true,
+                            zoomout: true,
+                            pan: false,
+                            reset: false | '<img src="/static/icons/reset.png" width="20">',
+                            customIcons: [],
+                        },
+                        export: {
+                            csv: {
+                                filename: undefined,
+                                columnDelimiter: ",",
+                                headerCategory: "category",
+                                headerValue: "value",
+                                dateFormatter(timestamp) {
+                                    return new Date(timestamp).toDateString();
+                                },
+                            },
+                        },
+                        autoSelected: "zoom",
+                    },
+                },
+                dataLabels: {
+                    enabled: false,
+                },
+                stroke: {
+                    curve: "smooth",
+                },
+                grid: {
+                    show: true,
+                    borderColor: "#f2f2f2",
+                    strokeDashArray: 1,
+                },
+                xaxis: {
+                    categories: [
+                        "01 Feb",
+                        "02 Feb",
+                        "03 Feb",
+                        "04 Feb",
+                        "05 Feb",
+                        "06 Feb",
+                        "07 Feb",
+                    ],
+                    labels: {
+                        style: {
+                            fontSize: "12px",
+                            fontWeight: 500,
+                        },
+                    },
+                    axisBorder: {
+                        color: "#ffffff",
+                    },
+                    axisTicks: {
+                        color: "#ffffff",
+                    },
+                },
+                yaxis: {
+                    labels: {
+                        style: {
+                            colors: ["#4B5563"],
+                            fontSize: "12px",
+                            fontWeight: 500,
+                        },
+                    },
+                },
+                legend: {
+                    show: true,
+                    fontSize: "14px",
+                    fontFamily: "Inter",
+                    fontWeight: 400,
+                    height: 60,
+                    tooltipHoverFormatter: undefined,
+                    offsetY: 20,
+                    markers: {
+                        width: 14,
+                        height: 14,
+                        strokeWidth: 1,
+                        strokeColor: "#fff",
+                        radius: 50,
+                    },
+                },
+                responsive: [
+                    {
+                        breakpoint: 768,
+                        options: {
+                            yaxis: {
+                                show: false,
+                            },
+                        },
+                    },
+                ],
+            };
+
+            var trafficVolumesChartEl = document.getElementById("traffic-volumes-chart");
+            if (trafficVolumesChartEl) {
+                var trafficVolumesChart = new ApexCharts(
+                    trafficVolumesChartEl,
+                    optionsTrafficVolumesChart
+                );
+                trafficVolumesChart.render();
+            }
+        });
+
+        window.onpageshow = function (event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+
+    </script>
 
 </body>
 </html>
